# EMC_GSI

./: .gitattributes  .gitmodules  .lfsconfig  CMakeLists.txt
Fix/: .gitattributes  Rcov_crisn20  Rcov_crisnpp  Rcov_iasialand  Rcov_iasiasea  Rcov_iasibland  Rcov_iasibsea  cloudy_radiance_info.txt  global_anavinfo.l127.txt  global_convinfo.txt  global_convinfo.txt.2013041500  global_convinfo.txt.2014041400  global_convinfo.txt.2016031512  global_convinfo.txt.2017071912  global_convinfo.txt.2018010512  global_convinfo.txt.3hr_satwnd  global_convinfo_reg_test.txt  global_ozinfo.txt  global_satinfo.txt  global_scaninfo.txt  hwrf_convinfo.txt  nam_regional_convinfo.txt  nam_regional_convinfo_reg_test.txt  prepobs_errtable.global
Fix/Big_Endian/: global_berror.l127y194.f77  global_berror.l127y386.f77  global_berror.l127y770.f77  global_berror.l127y98.f77
Fix/fv3_historical/: 0readme.convinfo  0readme.ozinfo  0readme.satinfo  global_convinfo.txt.2014041400  global_convinfo.txt.2016031512  global_convinfo.txt.2018022818  global_ozinfo.txt.2015110500  global_satinfo.txt.2015011412  global_satinfo.txt.2015070218  global_satinfo.txt.2015100118  global_satinfo.txt.2015111012  global_satinfo.txt.2016011912  global_satinfo.txt.2017030812  global_satinfo.txt.2017031612  global_satinfo.txt.2017103118  global_satinfo.txt.2018021212  global_satinfo.txt.2018053012
src/enkf/: CMakeLists.txt
src/gsi/: CMakeLists.txt
util/AeroDA/calc_increment_ens.fd/: CMakeLists.txt
util/Correlated_Obs/: CMakeLists.txt
util/EnKF/gfs/src/adderrspec.fd/: CMakeLists.txt
(+31 files in other folders)
