cmake_minimum_required(VERSION 2.6)
if(BUILD_UTIL)
  file(GLOB LOCAL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.f90)
  set_source_files_properties( ${LOCAL_SRC} PROPERTIES COMPILE_FLAGS ${UTIL_Fortran_FLAGS} )
  add_executable(adderrspec.x  ${LOCAL_SRC} )
  set_target_properties( adderrspec.x PROPERTIES COMPILE_FLAGS ${UTIL_Fortran_FLAGS} )
  SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_Fortran_FLAGS}" )
  include_directories( adderrspec.x ${w3emc4INC} ${sigioINC} ${nemsioINC} ) 
  target_link_libraries( adderrspec.x ${sp_4_LIBRARY} ${nemsio_LIBRARY} ${BACIO_LIBRARY} ${sigio_LIBRARY} ${MPI_Fortran_LIBRARIES} ${w3emc_4_LIBRARY} ${w3nco_4_LIBRARY} )
endif()
